<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SplashActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgLogoSplash"
            android:layout_width="105dp"
            android:layout_height="65dp"
            android:contentDescription="@string/splash_logo"
            android:src="@drawable/logo_splash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/roboto_regular"
            android:lineSpacingExtra="3sp"
            android:text="@string/splash_text"
            android:textColor="#707070"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <ImageView
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:contentDescription="@string/splash_logo_gees"
        android:src="@drawable/logo_splash_genes" />

</RelativeLayout>