<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/roboto_regular"
                android:lineSpacingExtra="8sp"
                android:text="@string/hello"
                android:textColor="#000000"
                android:textSize="38sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/SignInLayout"
                    android:layout_width="match_parent"
                    android:layout_height="410dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rtl_corner"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="30dp"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="end"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/sign_in"
                        android:textColor="#ffffff"
                        android:textSize="24sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="end"
                        android:lineSpacingExtra="3sp"
                        android:text="@string/new_here_returning"
                        android:textColor="#ffffff"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="end"
                        android:lineSpacingExtra="3sp"
                        android:text="@string/just_enter_mobile_handle_rest"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ExploreLayout"
                    android:layout_width="match_parent"
                    android:layout_height="310dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_ltl_corner"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="30dp"
                        android:fontFamily="@font/roboto_regular"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/explore"
                        android:textColor="#ffffff"
                        android:textSize="24sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/roboto_regular"
                        android:lineSpacingExtra="3sp"
                        android:text="@string/want_to_explore"
                        android:textColor="#ffffff"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/roboto_regular"
                        android:lineSpacingExtra="3sp"
                        android:text="@string/continue_guest_see_offer"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_regular"
                android:lineSpacingExtra="2sp"
                android:text="Or continue with"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="19dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="18dp"
                    android:src="@drawable/ic_facebook" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgTwitter"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="18dp"
                    android:src="@drawable/ic_twitter" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgFacebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_facebook" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtTermPolicy"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:layout_marginTop="21dp"
                android:lineSpacingExtra="3sp"
                android:layout_marginBottom="5dp"
                android:text="By continuing, you agree to YummyOne’s\nTerms of Service and Privacy Policy"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="normal" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>